area poster inclusion

--- a/gyms.html
+++ b/gyms.html
@@ -122,9 +122,9 @@
                         <img src="images/betatag.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
                         <div>
                             <div class="box-icon"><span class="ti-tag gradient-fill ti-3x"></span></div>
-                            <h3>Our <span style="font-weight: 800">βTags™</span></h3>
+                            <h3><span style="font-weight: 800">βTags™</span></h3>
                             <p class="lead">Organization is the problem and our tags are the solution. </p>
-                            <p>Print βTags™ directly from a climb's page or order dynamic, reusable βTags™ that you can attach to routes over and over to skip the process of reprinting. Along with key route information, βTags™ are marked with handy indicators for color and two hand starts.
+                            <p>Print <strong>βTags™</strong> directly from a climb's page or <strong>Area Posters</strong> that you can post away from the climb in the app. Order dynamic, reusable βTags™ that you can attach to routes over and over to skip the process of reprinting. Along with key route information, βTags™ are marked with handy indicators for color and two hand starts.
                             </p>
                             <p> Climbers can scan βTags™ to get beta, save and track progress, or to rate climbs. Gyms can also opt in for compact βTag™ that can be printed and added to existing tags. This option is especially suited for competitions that require multiple tags at a moment's notice.
                             </p>
@@ -186,7 +186,7 @@
 
     <div class="section">
 
-        <div class="container mb-5">
+        <div class="container mb-5 pb-3">
             <div class="row">
                 <div class="col-md-6">
                     <img src="images/comingout.png" alt="coming out photo" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
@@ -201,7 +201,7 @@
             </div>
 
         </div>
-
+</div>
     </div>
     <!-- // end .section -->
 
