--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
 <div class="container">
         <div class="container" >
             <div class="row">
-                <div class="col-md-5 text-center">
+                <div class="col-md-7 text-center">
                     <img src="images/dualphone1.png" alt="dual phone" class="img-fluid" id="dual-phone-img">
                 </div>
-                <div class="col-md-7 d-flex align-items-center">
+                <div class="col-md-5 d-flex align-items-center">
                     <div>
                         <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
-                        <h2>Scan the <span style="font-weight: 700">βTag™</span> and get Beta Videos Directly in Your Hands</h2>
+                        <h3>Scan the <span style="font-weight: 700">βTag™</span> or Area Posters!</h3>
                         <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for the solution for a climb you're stuck on. Watch and see the beta conveniently and seamlessly by scanning the βTag™ on the spot! </p>
                     </div>
                 </div>
