--- a/gyms.html
+++ b/gyms.html
@@ -119,7 +119,7 @@
             <div class="tab-content">
                 <div class="tab-pane fade show active" id="communication">
                     <div class="d-flex flex-column flex-lg-row">
-                        <img src="images/betatag.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
+                        <img src="images/betatag.png" alt="graphic" class="img-fluid align-self-start mr-lg-5 mb-5 mb-lg-0">
                         <div>
                             <div class="box-icon"><span class="ti-tag gradient-fill ti-3x"></span></div>
                             <h3><span style="font-weight: 800">βTags™</span></h3>
@@ -129,6 +129,7 @@
                             <p> Climbers can scan βTags™ to get beta, save and track progress, or to rate climbs. Gyms can also opt in for compact βTag™ that can be printed and added to existing tags. This option is especially suited for competitions that require multiple tags at a moment's notice.
                             </p>
                         </div>
+                        
                     </div>
                 </div>
                 <div class="tab-pane fade" id="schedule">
@@ -140,7 +141,7 @@
                             </p>
                             <img src="./images/dashboardicon.png" style="width: 180px">
                         </div>
-                        <img src="images/gallery/4.jpg" alt="graphic" class="img-fluid rounded align-self-start mr-lg-3 mb-5 mb-lg-0 col-md-4">
+                        <img src="images/gallery/4.jpg" alt="graphic" class="img-fluid align-self-start ml-lg-3 mb-5 mb-lg-0 col-md-4">
                     </div>
                 </div>
                 <div class="tab-pane fade" id="messages">
@@ -184,6 +185,26 @@
     </div>
     <!-- // end .section -->
 
+    <div class="section">
+
+        <div class="container mb-5 pb-3">
+            <div class="row">
+
+                <div class="col-md-4 order-last order-md-first d-flex align-items-center animated wow fadeInLeft" data-wow-duration="1.7s" data-wow-delay="0.3s">
+                    <div>
+                        <div class="box-icon"><span class="ti-calendar gradient-fill ti-3x"></span></div>
+                        <h2>Your Gym's App</h2>
+                        <p class="mb-4">With βouldersapp™, your gym gets its own app and webpage without all the hassle and overhead in developing.</p>
+                        <p>Include an events calendar, address for directions, hours of operation, images, promos, and more!</p>
+                </div>
+            </div>
+                <div class="col-md-8 order-first order-md-last">
+                    <img src="images/calendar.png" alt="coming out photo" class="img-fluid animated wow fadeIn align-self-start" data-wow-duration="2.0s" data-wow-delay="0.4s">
+                </div>
+
+        </div>
+</div>
+    </div>
     <div class="section">
 
         <div class="container mb-5 pb-3">
@@ -238,7 +259,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4 offset-md-1 text-center">
-                    <img src="images/iphonex2.png" alt="iphone" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
+                    <img src="images/iphonex2.png" alt="iphone" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s" style="position: relative; bottom: 20px">
                 </div>
 
             </div>
