--- a/gyms.html
+++ b/gyms.html
@@ -193,9 +193,11 @@
                 <div class="col-md-4 order-last order-md-first d-flex align-items-center animated wow fadeInLeft" data-wow-duration="1.7s" data-wow-delay="0.3s">
                     <div>
                         <div class="box-icon"><span class="ti-calendar gradient-fill ti-3x"></span></div>
-                        <h2>Your Gym's App</h2>
+                        <h3>Your Gym's App</h3>
                         <p class="mb-4">With βouldersapp™, your gym gets its own app and webpage without all the hassle and overhead in developing.</p>
                         <p>Include an events calendar, address for directions, hours of operation, images, promos, and more!</p>
+                        <img src="./images/googlecal.png" style="height:47px"><br/>
+                        <img src="./images/timely.png" style="height:50px">
                 </div>
             </div>
                 <div class="col-md-8 order-first order-md-last">
@@ -215,7 +217,7 @@
                 <div class="col-md-6 d-flex align-items-center animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.3s">
                     <div>
                         <div class="box-icon"><span class="ti-paint-bucket gradient-fill ti-3x"></span></div>
-                        <h2>Focused on Climbing</h2>
+                        <h3>Focused on Climbing</h3>
                         <p class="mb-4">As climbers ourselves, we built an app that prioritizes giving climbers of all levels the means to complete a route and save it. Because βouldersapp™ is centered on the climb and not about offering frivolous badges and awards, it is insanely easy and intituitive to use.</p>
                         <p>To demo, gyms may contact us for a free sample kit with reusuable tags.</p>
                 </div>
