--- a/gyms.html
+++ b/gyms.html
@@ -84,7 +84,7 @@
     </div>
 
 <header class="bg-top" id="home" style="background:url(./images/top.png) no-repeat center center fixed; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover;">
-        <div class="img-holder"><img src="images/iphonex3.png" alt="phone" class="img-fluid animated fadeInUp wow" data-wow-duration="1s" data-wow-delay="0.1s"></div>
+        <div class="img-holder"><img src="images/iphonex3.png" alt="phone" class="img-fluid animated fadeInUp wow phone-images" data-wow-duration="1s" data-wow-delay="0.1s"></div>
     </header>
 
     <div class="section-title p-3 mt-3">
