--- a/gyms.html
+++ b/gyms.html
@@ -123,8 +123,8 @@
                         <div>
                             <div class="box-icon"><span class="ti-tag gradient-fill ti-3x"></span></div>
                             <h3><span style="font-weight: 800">βTags™</span></h3>
-                            <p class="lead">Organization is the problem and our tags are the solution. </p>
-                            <p>Print <strong>βTags™</strong> directly from a climb's page or <strong>Area Posters</strong> that you can post away from the climb in the app. Order dynamic, reusable βTags™ that you can attach to routes over and over to skip the process of reprinting. Along with key route information, βTags™ are marked with handy indicators for color and two hand starts.
+                            <p class="lead">We listened to Gyms. Organization is the problem and our tags are the solution. </p>
+                            <p>Print <strong>βTags™</strong> directly from a climb's page or <strong>Area Posters</strong> that you can post away from the climb in the app. Order dynamic, reusable βTags™ that you can attach to routes over and over to skip the process of reprinting. Use the in app QR Scanner to reset the βTag™! Along with key route information, βTags™ are marked with handy indicators for color and two hand starts.
                             </p>
                             <p> Climbers can scan βTags™ to get beta, save and track progress, or to rate climbs. Gyms can also opt in for compact βTag™ that can be printed and added to existing tags. This option is especially suited for competitions that require multiple tags at a moment's notice.
                             </p>
@@ -217,8 +217,8 @@
                 <div class="col-md-6 d-flex align-items-center animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.3s">
                     <div>
                         <div class="box-icon"><span class="ti-paint-bucket gradient-fill ti-3x"></span></div>
-                        <h3>Focused on Climbing</h3>
-                        <p class="mb-4">As climbers ourselves, we built an app that prioritizes giving climbers of all levels the means to complete a route and save it. Because βouldersapp™ is centered on the climb and not about offering frivolous badges and awards, it is insanely easy and intituitive to use.</p>
+                        <h3>Focused on Beta</h3>
+                        <p class="mb-4">As climbers ourselves, we built an app that prioritizes giving climbers of all levels the means to complete a route and save it. Because βouldersapp™ is centered on the climb and not about offering frivolous badges and awards, it is insanely easy and intituitive to use. We believe that giving and sharing beta is what drives the climbing community together!</p>
                         <p>To demo, gyms may contact us for a free sample kit with reusuable tags.</p>
                 </div>
             </div>
@@ -376,7 +376,7 @@
             <div class="row pt-4">
                 <div class="col-md-6">
                     <h4 class="mb-3">As a gym, what do I have to do to integrate this into our system?</h4>
-                    <p class="light-font mb-5">Our app is a standalone web application. All that a gym has to do is be included in our participating gyms. Once you have a gym account, you're good to go! </p>
+                    <p class="light-font mb-5">Our app is a standalone web application. All that a gym has to do is be included in our participating gyms. Once you have a gym account, you're good to go! Best of all, since its all web based, you don't have to force users to download another app! (But you still can if you like)</p>
                 </div>
                 <div class="col-md-6">
                     <h4 class="mb-3">Does this app require more work for our setters?</h4>
