--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="section-title p-3 mt-3">
         <div class="container">
             <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Share Beta. Track Progress. Build Community.</h2>
-            <p class="tagline animated fadeIn wow mt-1" data-wow-duration="1.0s" data-wow-delay="1.2s">The app rock climbers wished for. Get the solution (beta) to bouldering routes and more!</p>
+            <p class="tagline animated fadeIn wow mt-1" data-wow-duration="1.0s" data-wow-delay="1.2s">The app rock climbers wished for. Connect with your gym and get the solution (beta) to bouldering routes plus more!</p>
         </div>
      </div>
 
