--- a/gyms.html
+++ b/gyms.html
@@ -123,10 +123,10 @@
                         <div>
                             <div class="box-icon"><span class="ti-tag gradient-fill ti-3x"></span></div>
                             <h3><span style="font-weight: 800">βTags™</span></h3>
-                            <p class="lead">We listened to Gyms. Organization is the problem and our tags are the solution. </p>
-                            <p>Print <strong>βTags™</strong> directly from a climb's page or <strong>Area Posters</strong> that you can post away from the climb in the app. Order dynamic, reusable βTags™ that you can attach to routes over and over to skip the process of reprinting. Use the in app QR Scanner to reset the βTag™! Along with key route information, βTags™ are marked with handy indicators for color and two hand starts.
+                            <p class="lead">We listened to Gyms: Organization is the problem and our tags are the solution. </p>
+                            <p>Order dynamic, reusable <strong>βTags™</strong> that you can attach to routes over and over to skip the process of reprinting or print from the app <strong>Area Posters</strong> that you can post away from your routes. Use the in app QR Scanner to reset the βTag™! Along with key route information, βTags™ are marked with handy indicators for color and two hand starts.
                             </p>
-                            <p> Climbers can scan βTags™ to get beta, save and track progress, or to rate climbs. Gyms can also opt in for compact βTag™ that can be printed and added to existing tags. This option is especially suited for competitions that require multiple tags at a moment's notice.
+                            <p> Climbers can scan βTags™ to get beta, save and track progress, or to rate climbs. From there, you can gather key metrics from those activities!
                             </p>
                         </div>
                         
@@ -218,7 +218,7 @@
                     <div>
                         <div class="box-icon"><span class="ti-paint-bucket gradient-fill ti-3x"></span></div>
                         <h3>Focused on Beta</h3>
-                        <p class="mb-4">As climbers ourselves, we built an app that prioritizes giving climbers of all levels the means to complete a route and save it. Because βouldersapp™ is centered on the climb and not about offering frivolous badges and awards, it is insanely easy and intituitive to use. We believe that giving and sharing beta is what drives the climbing community together!</p>
+                        <p class="mb-4">As climbers ourselves, we built an app that prioritizes giving climbers of all levels the means to complete a route and save it. Because βouldersapp™ is centered on the climb and not about offering frivolous badges and awards, it is insanely easy and intituitive to use. We believe that giving and sharing beta is what drives the climbing community together! (Not  shiny virtual tokens...)</p>
                         <p>To demo, gyms may contact us for a free sample kit with reusuable tags.</p>
                 </div>
             </div>
