removed fade in left and right

--- a/gyms.html
+++ b/gyms.html
@@ -190,7 +190,7 @@
         <div class="container mb-5 pb-3">
             <div class="row">
 
-                <div class="col-md-4 order-last order-md-first d-flex align-items-center animated wow fadeInLeft" data-wow-duration="1.7s" data-wow-delay="0.3s">
+                <div class="col-md-4 order-last order-md-first d-flex align-items-center">
                     <div>
                         <div class="box-icon"><span class="ti-calendar gradient-fill ti-3x"></span></div>
                         <h3>Your Gym's App</h3>
@@ -214,7 +214,7 @@
                 <div class="col-md-6">
                     <img src="images/comingout.png" alt="coming out photo" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
                 </div>
-                <div class="col-md-6 d-flex align-items-center animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.3s">
+                <div class="col-md-6 d-flex align-items-center">
                     <div>
                         <div class="box-icon"><span class="ti-paint-bucket gradient-fill ti-3x"></span></div>
                         <h3>Focused on Beta</h3>
@@ -235,7 +235,7 @@
             <div class="box-icon"><span class="ti-time gradient-fill ti-3x"></span></div>
             <h3>Adding Climbs is Easy, Simple, and Quick.</h3>
             <div class="row">
-                <div class="col-md-7 d-flex align-items-center animated wow fadeInLeft" data-wow-duration="1.7s" data-wow-delay="0.3s">
+                <div class="col-md-7 d-flex align-items-center">
                     <ul class="list-unstyled ui-steps">
                         <li class="media">
                             <div class="circle-icon mr-4">1</div>
