logo name change

--- a/gyms.html
+++ b/gyms.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>βouldersapp™: Rock Climbing App (Gyms)</title>
+    <title>βoulders™ (BetaBoulders): Rock Climbing App (Gyms)</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <meta name="title" content="βouldersapp™"> 
+    <meta name="title" content="βoulders™"> 
     <meta name="description" content="Rock climbing platform connecting climbers, routesetters, and gyms.">
-    <meta name="keywords" content="climbing, gym, rock, beta, indoor, app, climb">
+    <meta name="keywords" content="betaboulders, beta boulders, climbing app, climbing, gym, rock, beta, indoor, app, climb">
     <meta name="author" content="David Lac">
     <link rel="shortcut icon" href="./beta_icon.ico" type="image/x-icon">
     <link rel="icon" href="./beta_icon.ico" type="image/x-icon">
@@ -194,7 +194,7 @@
                     <div>
                         <div class="box-icon"><span class="ti-calendar gradient-fill ti-3x"></span></div>
                         <h3>Your Gym's App</h3>
-                        <p class="mb-4">With βouldersapp™, your gym gets its own app and webpage without all the hassle and overhead in developing.</p>
+                        <p class="mb-4">With BetaBoulders, your gym gets its own app and webpage without all the hassle and overhead in developing.</p>
                         <p>Include an events calendar, address for directions, hours of operation, images, promos, and more!</p>
                         <img src="./images/googlecal.png" style="height:47px"><br/>
                         <img src="./images/timely.png" style="height:50px">
@@ -218,7 +218,7 @@
                     <div>
                         <div class="box-icon"><span class="ti-paint-bucket gradient-fill ti-3x"></span></div>
                         <h3>Focused on Beta</h3>
-                        <p class="mb-4">As climbers ourselves, we built an app that prioritizes giving climbers of all levels the means to complete a route and save it. Because βouldersapp™ is centered on the climb and not about offering frivolous badges and awards, it is insanely easy and intituitive to use. We believe that giving and sharing beta is what drives the climbing community together! (Not  shiny virtual tokens...)</p>
+                        <p class="mb-4">As climbers ourselves, we built an app that prioritizes giving climbers of all levels the means to complete a route and save it. Because BetaBoulders is centered on the climb and not about offering frivolous badges and awards, it is insanely easy and intituitive to use. We believe that giving and sharing beta is what drives the climbing community together! (Not  shiny virtual tokens...)</p>
                         <p>To demo, gyms may contact us for a free sample kit with reusuable tags.</p>
                 </div>
             </div>
