--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta name="google-site-verification" content="qE_2uNIzqw8Qgsx-e5LAJK0m7iD8lP5yYw2TvwjW1-k" />
-    <title>βouldersapp™: Rock Climbing App (Climbers)</title>
+    <title>βoulders™ (BetaBoulders): Rock Climbing App (Climbers)</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="title" content="βouldersapp™"> 
+    <meta name="title" content="βoulders™"> 
     <meta name="description" content="Rock climbing platform connecting climbers, routesetters, and gyms.">
-    <meta name="keywords" content="climbing, gym, rock, beta, indoor, app, climb, boulders, bouldering, rock climbing app, indoor rock climbing app, rock climbing">
+    <meta name="keywords" content="betaboulders, beta boulders, climbing, gym, rock, beta, indoor, app, climb, boulders, bouldering, rock climbing app, indoor rock climbing app, rock climbing">
     <meta name="author" content="David Lac">
     <link rel="shortcut icon" href="./beta_icon.ico" type="image/x-icon">
     <link rel="icon" href="./beta_icon.ico" type="image/x-icon">
@@ -128,7 +128,7 @@
                 <div class="col-lg-6 offset-lg-6">
                     <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                     <h2>The first of its kind.</h2>
-                    <p class="mb-4">There's no other application tailored made for climbers and developed and marketed by climbers that allows users to quickly track progress and get beta for free. Use βouldersapp™ to check into your climbing gym and start tracking your climbs and seeing beta when you need it!</p>
+                    <p class="mb-4">There's no other application tailored made for climbers and developed and marketed by climbers that allows users to quickly track progress and get beta for free. Use BetaBoulders to check into your climbing gym and start tracking your climbs and seeing beta when you need it!</p>
                     <a href="https://main.betabouldersapp.com/climbs" class="btn btn-secondary">Check it Out!</a>
                 </div>
             </div>
@@ -238,7 +238,7 @@
                     <h4 class="mb-3">Do I have to have an account to use this app?</h4>
                     <p class="light-font mb-5">Nope! You can access the database, browse climbs, and see beta without an account. We envision this app to be used by both gym members and guests. However, you'll be missing out on a few key features like checking in with your phone and the ability to tick and bookmark climbs to track progress! </p>
                     <h4 class="mb-3">Do I have to download anything?</h4>
-                    <p class="light-font mb-5">BetaBoulders App is originally an all web application. You can access it on your browser (phone or desktop) and use all the features. You can also choose to save it to your homepage as our app is a Progressive Web Application. By doing so, it will be treated and act like an app you downloaded. However, iOS and Android apps are coming soon!</p>
+                    <p class="light-font mb-5">BetaBoulders is originally an all web application. You can access it on your browser (phone or desktop) and use all the features. You can also choose to save it to your homepage as our app is a Progressive Web Application. By doing so, it will be treated and act like an app you downloaded. However, iOS and Android apps are coming soon!</p>
 
                 </div>
                 <div class="col-md-6">
