--- a/gyms.html
+++ b/gyms.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>βoulders™ (BetaBoulders): Rock Climbing App (Gyms)</title>
+    <title>BetaBoulders: Indoor Rock Climbing App (Gym Info)</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
