--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="google-site-verification" content="qE_2uNIzqw8Qgsx-e5LAJK0m7iD8lP5yYw2TvwjW1-k" />
-    <title>βoulders™ (BetaBoulders): Rock Climbing App (Climbers)</title>
+    <title>BetaBoulders: Indoor Rock Climbing App</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
