--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="col-lg-6 offset-lg-6">
                     <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                     <h2>The first of its kind.</h2>
-                    <p class="mb-4">There's no other application tailored made for climbers and developed and marketed by climbers that allows users to quickly track progress and get beta for free. Use BetaBoulders to check into your climbing gym and start tracking your climbs and seeing beta when you need it!</p>
+                    <p class="mb-4">There's no other app tailored made for climbers and developed by climbers that allows people to quickly track progress and share beta. Use BetaBoulders to check into your climbing gym and start tracking your climbs and seeing beta when you need it!</p>
                     <a href="https://main.betabouldersapp.com/climbs" class="btn btn-secondary">Check it Out!</a>
                 </div>
             </div>
