--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <span class="ti-download gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">No Downloads</h4>
-                                    <p class="card-text">Accessible by anyone with internet. Scan the βTag™ or go to the main application view beta and track your progress at participating gyms.</p>
+                                    <p class="card-text">Accessible by anyone with a browser. Scan the βTag™ or go to the main application to share beta and track progress at participating gyms.</p>
                                 </div>
                             </div>
                         </div>
@@ -94,7 +94,7 @@
                                 <span class="ti-face-smile gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">Team Send!</h4>
-                                    <p class="card-text">Don't wait around for beta from someone else. See it straight from the routesetter by scanning the βTag™. Don't want video? Get annotated climbs for that crux you're stuck on instead! </p>
+                                    <p class="card-text">Don't wait around for beta. Get video or an annotated image for that crux you're stuck on so you can finish that problem! </p>
                                 </div>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                                 <span class="ti-user gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">1 App, All Climbing Gyms</h4>
-                                    <p class="card-text">Join the community! Tick climbs and track your progress with our visualization tools. Share your climbs, progress, and your beta with friends! </p>
+                                    <p class="card-text">Join the community! Tick climbs and track your progress with stats. Share and compare your climbs, progress, and beta with friends! </p>
                                 </div>
                             </div>
                         </div>
@@ -128,7 +128,7 @@
                 <div class="col-lg-6 offset-lg-6">
                     <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                     <h2>The first of its kind.</h2>
-                    <p class="mb-4">There's no other app tailored made for climbers and developed by climbers that allows people to quickly track progress and share beta. Use BetaBoulders to check into your climbing gym and start tracking your climbs and seeing beta when you need it!</p>
+                    <p class="mb-4">There's no other app tailored made for climbers and developed by climbers that allows people to quickly track progress and share beta. Use BetaBoulders to check into your climbing gym and start tracking climbs and getting beta when you need it!</p>
                     <a href="https://main.betabouldersapp.com/climbs" class="btn btn-secondary">Check it Out!</a>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                     <div>
                         <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
                         <h3>Scan the <span style="font-weight: 700">βTag™</span> or Area Posters!</h3>
-                        <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for the solution for a climb you're stuck on. Watch and see the beta conveniently and seamlessly by scanning the βTag™ on the spot! </p>
+                        <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for the solution for a climb you're stuck on. Watch and view beta seamlessly by scanning the βTag™ with your phone's camera or NFC tag reader. </p>
                     </div>
                 </div>
             </div>
