--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
                 <div class="col-lg-6 offset-lg-6">
                     <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                     <h2>The first of its kind.</h2>
-                    <p class="mb-4">There's no other app tailored made for climbers and developed by climbers that allows people to quickly track progress and share beta. Use BetaBoulders to check into your climbing gym and start tracking climbs and getting beta when you need it!</p>
+                    <p class="mb-4">There's no other app tailored made for climbers and developed by climbers that allows you to quickly track progress and share beta. Use BetaBoulders to check into your climbing gym!</p>
                     <a href="https://main.betabouldersapp.com/climbs" class="btn btn-secondary">Check it Out!</a>
                 </div>
             </div>
-            <div class="perspective-phone">
-                <img src="images/perspective.png" alt="perspective phone" class="img-fluid">
+            <div class="perspective-phone col-6 text-center text-md-left">
+                <img src="images/perspective.png" alt="perspective phone" class="img-fluid mx-auto my-3" style="max-width: 45vw; min-width: 350px">
             </div>
         </div>
     </div>
@@ -152,7 +152,7 @@
                     <div>
                         <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
                         <h3>Scan the <span style="font-weight: 700">βTag™</span> or Area Posters!</h3>
-                        <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for the solution for a climb you're stuck on. Watch and view beta seamlessly by scanning the βTag™ with your phone's camera or NFC tag reader. </p>
+                        <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for the solution for climbing solutions. Watch and view beta seamlessly by scanning the βTag™ with your phone's camera or NFC tag reader. </p>
                     </div>
                 </div>
             </div>
