--- a/gyms.html
+++ b/gyms.html
@@ -26,7 +26,7 @@
     <!-- Main css -->
     <link href="./css/style.css" rel="stylesheet">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
-<!-- Start of Async Drift Code -->
+    <!-- Start of Async Drift Code -->
     <script>
     "use strict";
 
@@ -240,7 +240,7 @@
                         <li class="media">
                             <div class="circle-icon mr-4">1</div>
                             <div class="media-body">
-                                <h5>Log into your Gym or Setter Account</h5>
+                                <h5>Log into with Any Account</h5>
                                 <p>And navigate to your gym's page.</p>
                             </div>
                         </li>
@@ -339,10 +339,6 @@
         </div>
         <div class="container mt-5 mb-5 pl-5 pr-5 text-center">
             <div class="row text-center">
-                <div class="col-6 col-md-3">
-                    <a href="./guides/pdfs/gym.pdf" target="_blank"><img class="img-fluid border mb-2" src="./guides/previews/gym.png"></a>
-                    <p/>Gym Account Setup
-                </div>
                 <div class="col-6 col-md-3">
                     <a href="./guides/pdfs/setter.pdf" target="_blank"><img class="img-fluid border mb-2" src="./guides/previews/setter.png"></a>
                     <p/>Setter Account Setup
