--- a/gyms.html
+++ b/gyms.html
@@ -345,11 +345,11 @@
                 </div>
                 <div class="col-6 col-md-3">
                     <a href="./guides/pdfs/addclimb.pdf" target="_blank"><img class="img-fluid border mb-2" src="./guides/previews/addclimb.png"></a>
-                    <p/>How to: Adding Climbs
+                    <p/>How to: Add Climbs
                 </div>
                 <div class="col-6 col-md-3">
                     <a href="./guides/pdfs/scan.pdf" target="_blank"><img class="img-fluid border mb-2" src="./guides/previews/scan.png"></a>
-                    <p/>How to: Scans and Ticks
+                    <p/>How to: Scan and Tick
                 </div>
                 <div class="col-6 col-md-3">
                     <a href="./guides/pdfs/reset.pdf" target="_blank"><img class="img-fluid border mb-2" src="./guides/previews/reset.png"></a>
