--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                     <a href="https://main.betabouldersapp.com/climbs" class="btn btn-secondary">Check it Out!</a>
                 </div>
             </div>
-            <div class="perspective-phone col-6 text-center text-md-left">
-                <img src="images/perspective.png" alt="perspective phone" class="img-fluid mx-auto my-3" style="max-width: 45vw; min-width: 350px">
+            <div class="perspective-phone text-center text-md-left">
+                <img src="images/perspective.png" alt="perspective phone" class="img-fluid mx-auto my-3" style="max-width: 45vw; min-width: 320px">
             </div>
         </div>
     </div>
