--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <nav class="navbar navbar-dark navbar-expand-lg">
-                        <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="img-fluid" alt="logo" id="logo-nav"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+                    <nav class="navbar navbar-dark navbar-expand-lg pb-0 px-0">
+                        <a class="navbar-brand py-0" href="index.html"><img src="images/logo.png" class="img-fluid" alt="logo" id="logo-nav"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
@@ -59,10 +59,14 @@
         <div class="img-holder"><img src="images/iphonex.png" alt="phone" class="img-fluid animated fadeInUp wow phone-images" data-wow-duration="1s" data-wow-delay="0.1s"></div>
     </header>
 
-    <div class="section-title p-3 mt-3">
+    <div class="section-title p-3">
         <div class="container">
             <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Share Beta. Track Progress. Build Community.</h2>
-            <p class="tagline animated fadeIn wow mt-1" data-wow-duration="1.0s" data-wow-delay="1.2s">The app rock climbers wished for. Connect with your gym and get the solution (beta) to bouldering routes plus more!</p>
+            <p class="tagline animated fadeIn wow mt-1" data-wow-duration="1.0s" data-wow-delay="1.2s">Connect with your gym and get the solution (beta) to bouldering routes plus more!</p>
+            <div>
+            <a href='https://play.google.com/store/apps/details?id=com.betabouldersapp&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' class="img-fluid" style="height: 60px"/></a>
+            <a href='https://main.betabouldersapp.com/'><img alt='Open App' src='./images/badges/web-badge.png' class="img-fluid" style="height: 40px"/></a>
+        </div>
         </div>
      </div>
 
@@ -133,7 +137,7 @@
                 </div>
             </div>
             <div class="perspective-phone text-center text-md-left">
-                <img src="images/perspective.png" alt="perspective phone" class="img-fluid mx-auto my-3" style="max-width: 45vw; min-width: 320px">
+                <img src="images/perspective.png" alt="perspective phone" class="img-fluid mx-auto my-3" style="max-width: 40vw; min-width: 320px">
             </div>
         </div>
     </div>
