--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="google-site-verification" content="qE_2uNIzqw8Qgsx-e5LAJK0m7iD8lP5yYw2TvwjW1-k" />
-    <title>BetaBoulders: Indoor Rock Climbing App</title>
+    <title>Beta Boulders: Indoor Rock Climbing App</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -46,7 +46,7 @@
                                 <li class="nav-item"> <a class="nav-link" href="#gallery">GALLERY</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#contact">CONTACT</a> </li>
                                 <li class="nav-item mb-2"><a href="./gyms" class="btn btn-outline-light ml-lg-3">FOR GYMS</a></li>
-                                <li class="nav-item"><a href="https://main.betabouldersapp.com" class="btn btn-outline-light ml-lg-3" target="_blank">APP</a></li>
+                                <li class="nav-item mb-2"><a href="https://main.betabouldersapp.com" class="btn btn-outline-light ml-lg-3" target="_blank">APP</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -266,14 +266,14 @@
             <div class="call-to-action">
 
                 <div class="text-center mb-3"><img src="./images/desktop.png" class="img-fluid" style="max-height: 256px"></div>
-                <div class="my-4">
+<!--                 <div class="my-4">
                     <button class="btn btn-light bg-white"><img src="./images/apple.png" alt="icon" class="img-fluid" style="max-height: 100px"></button>
                     <button class="btn btn-light bg-white"><img src="./images/play.png" alt="icon" class="img-fluid" style="max-height: 100px"></button>
                     <button class="btn btn-light bg-white"><img src="./public/img/ReadMe/pwa.png" alt="icon" class="img-fluid" style="max-height: 100px;"></button>
-                </div>
+                </div> -->
                 <h2>Accessible Anywhere</h2>
                 <p class="tagline">Available for all* major mobile and desktop platforms.</p>
-                <p class="text-primary"><small><i>*Tested and working on Chrome, Firefox, and Safari browsers. </i></small></p>
+                <p class="text-primary"><small><i>*Tested and working on Chrome, Firefox, and Safari browsers. QR Scanner incompatiable for chrome on iOS devices. </i></small></p>
 
                 
             </div>
@@ -286,7 +286,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 text-center text-lg-left">
-                	<div class="text-center mb-4 mx-auto"><img src="./images/beta.png" class="img-fluid" style="max-height: 200px"></div>
+                	<div class="text-center mb-4 mx-auto"><img src="./images/beta.png" class="img-fluid" alt="Beta Boulders" title="Beta Boulders" style="max-height: 200px"></div>
                     <div class="container">
                     <p class="mb-2"> <span class="ti-location-pin mr-2"></span> Los Angeles, CA</p>
                     <div class=" d-block d-sm-inline-block">
